# csa_semantic_mapping

./: CMakeLists.txt  README.md  package.xml  setup.py
csa_semantic_mapping/: CMakeLists.txt  setup.py
csa_semantic_mapping/csa_semantic_mapping/: yolo_tracker_node.py
csa_semantic_mapping/launch/: csa_stage1.launch.py
csa_semantic_mapping/msg/: TrackedObjectArray.msg
csa_semantic_mapping_py/: slam_pose_node.py  yolo_tracker_node.py
csa_semantic_mapping_py/utils/: config.py  projection.py  yolov5_infer.py
study_report/: CSA 연구 일지 – 2025-04-4주차.md  CSA 연구 일지 – 2025-04-5주차.md  CSA 연구 일지 – 2025-05-1주차.md  CSA 연구 일지 – 2025-05-2주차.md  csa 연구일지 5월 3주차.md
