<?xml version="1.0"?>
<package format="3">
  <name>csa_semantic_mapping</name>
  <version>0.1.0</version>
  <description>CSA Stage 1: Semantic Mapping System</description>

  <maintainer email="jack0682@soongsil.ac.kr">Oh JaeHong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
